needed_on_adminws/k8s/istio/my-service-for-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-istio-service
spec:
  selector:
    app: metrics
    department: sales
  # do not use 'type' or 'loadBalancerIP' elements
  ports:
  - port: 80 # port now offered by this service
    targetPort: 8080 # port on pod
